plang/testing/logs/false-incorrect/148/program148.p.p.out
Error at uR5 w cqTd :- ((smA4 yY (Mjw7Y) (WXFeE) (SG), w3RnA (zU (JZ)) (Lgz) P), (nH (SIXc) VJaG qLM dat)); lqz.:4:13 error: 
uR5 w cqTd :- ((smA4 yY (Mjw7Y) (WXFeE) (SG), w3RnA (zU (JZ)) (Lgz) P), (nH (SIXc) VJaG qLM dat)); lqz.
            ^
Error at uR5 w cqTd :- ((smA4 yY (Mjw7Y) (WXFeE) (SG), w3RnA (zU (JZ)) (Lgz) P), (nH (SIXc) VJaG qLM dat)); lqz.:4:44 error: 
uR5 w cqTd :- ((smA4 yY (Mjw7Y) (WXFeE) (SG), w3RnA (zU (JZ)) (Lgz) P), (nH (SIXc) VJaG qLM dat)); lqz.
                                           ^
Error at uR5 w cqTd :- ((smA4 yY (Mjw7Y) (WXFeE) (SG), w3RnA (zU (JZ)) (Lgz) P), (nH (SIXc) VJaG qLM dat)); lqz.:4:69 error: 
uR5 w cqTd :- ((smA4 yY (Mjw7Y) (WXFeE) (SG), w3RnA (zU (JZ)) (Lgz) P), (nH (SIXc) VJaG qLM dat)); lqz.
                                                                    ^
Error at uR5 w cqTd :- ((smA4 yY (Mjw7Y) (WXFeE) (SG), w3RnA (zU (JZ)) (Lgz) P), (nH (SIXc) VJaG qLM dat)); lqz.:4:95 error: 
uR5 w cqTd :- ((smA4 yY (Mjw7Y) (WXFeE) (SG), w3RnA (zU (JZ)) (Lgz) P), (nH (SIXc) VJaG qLM dat)); lqz.
                                                                                              ^