plang/testing/logs/false-incorrect/148/program148.p.p
x7 J (eJH (SJ) (fYan1 (r e5lQ) R (p cHX b (t0Gdh (cNi) (RLX)) (Kb1T)) ifLTO)) L4Gjy (a XpyW).

j (MAz) qDx (aHpj S1Sg1 IGE7I spuP ccV) (Y5) :- vg (Ad) (u6cl3 (iyHEP o rOa N9VeK) (r (vz x3eu (CmPG) (HdIdY))) Ic jkv) mJh IguUv, qM1ra kbe (U) (Pi6H) s3, v9ak OljMc uLKg (SRBN) dS, (h63nw wrWfo), (qFoX; bO (w (y6sr) (gXs (v9M) (D90Hu) (kvvv uqgx) (Z)) LJ (oo yMKEt (ea T (e) oI5r (NdR)) (pw (j8 VF vv czCz) (DY7dd) qEo wL) (AB))) (w4yBA bxlf uYEk (B) pI) dnB (I2V), scn2).
uR5 w cqTd :- ((smA4 yY (Mjw7Y) (WXFeE) (SG), w3RnA (zU (JZ)) (Lgz) P), (nH (SIXc) VJaG qLM dat)); lqz.

l8BBd OBm tFrr0 (y (fvu) PZe (V) s).
ks.
qC.

lVHb (yky gcOLH).

? l IO92 Bwihh; pMJ0.
